[package]
name = "sagitta"
version = "0.2.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sagitta"
path = "src/lib.rs"

[[bin]]
name = "sagitta"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
lexopt = "0.2.1"
rev_buf_reader = "0.3.0"
tempfile = "3.3.0"
